--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Mi Web de Plugins</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <h1>Bienvenido a Mi Web de Plugins</h1>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="plugins.html">Plugins</a>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h2>¡Descarga tus plugins gratis!</h2>
+            <p>Encuentra aquí mis plugins de Minecraft listos para usar. Haz clic en "Plugins" para ver la lista completa.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>© 2026 Mi Web de Plugins</p>
+    </footer>
+</body>
+</html>
 
