--- a/plugins.html
+++ b/plugins.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Plugins</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+    <header>
+        <h1>Plugins Disponibles</h1>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="plugins.html">Plugins</a>
+        </nav>
+    </header>
+
+    <main>
+        <div class="plugin">
+            <h3>AtlasCore</h3>
+            <p>Core con /spawn automático, /setspawn y administración.</p>
+            <a href="plugins/AtlasCore.jar" download>Descargar</a>
+        </div>
+
+        <!-- Puedes duplicar este bloque para más plugins -->
+        <!--
+        <div class="plugin">
+            <h3>OtroPlugin</h3>
+            <p>Descripción de otro plugin.</p>
+            <a href="plugins/OtroPlugin.jar" download>Descargar</a>
+        </div>
+        -->
+    </main>
+
+    <footer>
+        <p>© 2026 Mi Web de Plugins</p>
+    </footer>
+</body>
+</html>
 
